Ukryta sekcja o zrzutce.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ poznawanie kraju, jego miast oraz ludzi, a także komunikację i
 przygotowanie się do samej wędrówki.</p>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-4" id="sec-7687">
+<!--     <section class="u-align-center u-clearfix u-section-4" id="sec-7687">
       <div class="u-align-center u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h2 class="u-text u-text-default u-text-1">Zbiórka funduszy</h2>
         <p class="u-text u-text-2">Zapraszamy do wsparcia prowadzonej przez nas zrzutki.<br>
@@ -82,7 +82,7 @@ wyjazdem.
         </p>
         <a href="https://zrzutka.pl/gacvhc" class="u-border-none u-btn u-button-style u-palette-3-base u-btn-1">Zrzutka</a>
       </div>
-    </section>
+    </section> -->
 
 
     <section class="u-align-center u-clearfix">
