--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-section-2" id="sec-22a7">
+    <section class="u-clearfix u-section-2 u-grey-80" id="sec-22a7">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-1">O wyprawie</h2>
         <p class="u-align-center u-text u-text-2"> Jesteśmy drużyną
@@ -85,7 +85,7 @@ wyjazdem.
     </section> -->
 
 
-    <section class="u-align-center u-clearfix">
+    <section class="u-align-center u-clearfix u-section-4 u-grey-80">
           <div class="u-align-center u-clearfix u-sheet u-sheet-1">
 
                     <h2 class="u-text u-text-1" style="text-align: center; margin-top: 8vh;">Nasze media społecznoścowe</h2>
@@ -100,7 +100,7 @@ wyjazdem.
     </section>
 
 
-    <section class="u-align-center u-clearfix u-section-6" id="sec-e230">
+    <!-- <section class="u-align-center u-clearfix u-section-6 u-grey-80" id="sec-e230">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-default u-text-1">Partnerzy wyprawy</h2>
         <div class="u-expanded-width u-list u-list-1">
@@ -120,7 +120,7 @@ wyjazdem.
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
 
     <footer class="u-align-center u-clearfix u-grey-80" id="sec-2b4b">
